tests/baselines/reference/for-of1.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of1.ts(2,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of1.ts (1 errors) ====
    var v;
    for (v of []) { }
              ~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.